--- a/input_page.html
+++ b/input_page.html
@@ -9,7 +9,7 @@
         <div  style="text-align: center;">
             <h1> Input URL </h1>
             <br><br><br>
-            <form action="/scraped_data1.php" method="get">
+            <form action="/scraped_data.php" method="get">
                 Enter your URL here:  <input type="text" name="url" placeholder="URL">
                 <br><br>
                 <input name="submit" type="submit" value="Submit">
